Fix vertical alignment of nav bar items (#60)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -106,7 +106,7 @@ button {
   margin: 0 auto;
   padding: var(--space-5) var(--space-4);
   display: flex;
-  align-items: baseline;
+  align-items: center;
   justify-content: space-between;
   gap: var(--space-3);
 }
